# cpp_algorithms

3D-2D_conversion_pcl-master/: CMakeLists.txt
AutomaticLabelingTool-main/data_generator/: CMakeLists.txt  CODEOWNERS  README.md  package.xml
AutomaticLabelingTool-main/data_generator/include/: camera_info.h  cloud_handler.h  csv.h  data_generator.h  data_prep.h  data_type.h  disparity_handler.h  map_handler.h
AutomaticLabelingTool-main/data_generator/src/: camera_info.cpp  cloud_handler.cpp  data_generator.cpp  data_prep.cpp  disparity_handler.cpp  map_handler.cpp
AutomaticLabelingTool-main/data_generator/test/: data.cpp  data_generation.cpp  disparity.cpp  map.cpp  pointCloud.cpp  projector.cpp  semSegBilder.cpp
camera_pose_estimation-main/: CMakeLists.txt  README.md  cameraPoseEstimation.cpp  cameraPoseEstimation.h  main.cpp
